# rpizero-arlo

./: .gitignore  notes.md
.github/workflows/: docker-build.yml  dockerimage.yml
receiver/: .dockerignore  .gitignore  Dockerfile  arlo_files.txt  arlo_monitor.py  cloud-init.yaml  cv_utils.py  docker-entrypoint.sh  flash.sh  mjpeg_frame_generator.py  pyproject.toml  readme.md  requirements.txt  test.py  test_mjpeg_frame_generator.py  utils.py  video_notifier.py  video_recogniser.py  video_server.py  video_utils.py  yolo_recogniser.py
sender/: arlo_sender.py  pyproject.toml  requirements.txt  run.sh
